--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -52,3 +52,66 @@ input, textarea, select {
   font-size: inherit;
   font-weight: inherit;
 }
+
+*, *:before, *:after {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+* {
+  -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
+}
+
+html {
+  font-size: 62.5%;
+}
+
+body {
+  -webkit-text-size-adjust: none;
+  font-family: "Microsoft Yahei", "Helvetica Neue", Helvetica, STHeiTi, sans-serif;
+  font-size: 1.4rem;
+  background-color: #FFF;
+  overflow-x: hidden;
+  position: relative;
+}
+
+html, body {
+  -webkit-user-select: none;
+  user-select: none;
+  width: 100%;
+  height: 100%;
+}
+
+a {
+  text-decoration: none;
+  color: #333;
+}
+
+::-webkit-scrollbar {
+  width: 0px;
+}
+
+.container:before, .panel:before, .cf:before {
+  content: "";
+  display: table;
+}
+
+.container:after, .panel:after, .cf:after {
+  clear: both;
+  content: "";
+  display: table;
+}
+
+.por {
+  position: relative;
+}
+
+.poa {
+  position: absolute;
+}
+
+.overscroll {
+  overflow-y: scroll;
+  -webkit-overflow-scrolling: touch;
+}
