--- a/src/styles/sass/test.scss
+++ b/src/styles/sass/test.scss
@@ -1,128 +1,6 @@
-@charset "UTF-8";
-@import "mix";
-body, div, dl, dt, dd, ul, ol, li, h1, h2, h3, h4, h5, h6, pre, code, form, fieldset, legend, input, textarea, p, blockquote, th, td {
-    margin: 0;
-    padding: 0;
-}
-table {
-    border-collapse: collapse;
-    border-spacing: 0;
-}
-fieldset, img {
-    border: 0;
-}
-address, caption, cite, code, dfn, th, var {
-    font-style: normal;
-    font-weight: normal;
-}
-ol, ul {
-    list-style: none;
-}
-caption, th {
-    text-align: left;
-}
-h1, h2, h3, h4, h5, h6 {
-    font-size: 100%;
-    font-weight: normal;
-}
-q:before, q:after {
-    content: '';
-}
-abbr, acronym {
-    border: 0;
-    font-variant: normal;
-}
-sup {
-    vertical-align: text-top;
-}
-sub {
-    vertical-align: text-bottom;
-}
-input, textarea, select {
-    font-family: inherit;
-    font-size: inherit;
-    font-weight: inherit;
-}
-*, *:before, *:after {
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
-}
-* {
-    -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
-}
-html {
-    font-size: 62.5%;
-}
-body {
-    -webkit-text-size-adjust: none;
-    font-family: "Microsoft Yahei", "Helvetica Neue", Helvetica, STHeiTi, sans-serif;
-    font-size: 1.4rem;
-    background-color: #FFF;
-    overflow-x: hidden;
-    position: relative;
-}
-html, body {
-    -webkit-user-select: none;
-    user-select: none;
-    width: 100%;
-    height: 100%;
-}
-a {
-    text-decoration: none;
-    color: #333;
-}
-::-webkit-scrollbar {
-    width: 0px;
-}
-.container:before, .row:before, .panel:before, .cf:before {
-    content: "";
-    display: table;
-}
-.container:after, .row:after, .panel:after, .cf:after {
-    clear: both;
-    content: "";
-    display: table;
-}
-//mobile
-//
-.por {
-    position: relative;
-}
-.poa {
-    position: absolute;
-}
-.wrapper {
-    width: 100%;
-    height: 100%;
-    position: relative;
-    -webkit-perspective: 1200px;
-    perspective: 1200px;
-    -webkit-transform-style: preserve-3d;
-    transform-style: preserve-3d;
-}
-.page {
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    overflow: hidden;
-    visibility: hidden;
-    z-index: 0;
-    left: 0;
-    top: 0;
-    -webkit-backface-visibility: hidden;
-    backface-visibility: hidden;
-    -webkit-transform-style: preserve-3d;
-    transform-style: preserve-3d;
-    .m_cont {
-        height: 100%;
-        display: none;
-    }
-}
-@media screen and (min-width: 640px) {
-    
-}
-.overscroll {
-    overflow-y: scroll;
-    -webkit-overflow-scrolling: touch;
+.slider{
+  height: 100px;
+  width: 100%;
+  background-color: #DDD;
+  padding: 10px;
 }
