--- a/src/styles/sass/test.scss
+++ b/src/styles/sass/test.scss
@@ -26,3 +26,42 @@
     bottom: 0;
     background-color: rgba(0,0,0,.6);
 }
+
+.wrapperAll{
+    // height: 100%;
+    width: 100%;
+}
+.block{
+    height: 150px;
+    margin: 0 15px 15px;
+    background-color: #DDD;
+    &:last-child{
+        margin-bottom: 0;
+    }
+}
+.btm-opers{
+    text-align: center;
+    width: 100%;
+    z-index: 5000;
+}
+
+///////////
+// btn按钮 //
+///////////
+.btn{
+    display: inline-block;
+    font-size: 1.6rem;
+    line-height: 2.4rem;
+    background-color: #EEE;
+    color: #666;
+    text-align: center;
+    padding: 5px 10px;
+}
+
+.fix{
+    position: fixed;
+}
+.fix-bottom{
+    left: 0;
+    bottom: 0;
+}
