component dialog update, add animation , add constructor

--- a/src/styles/mu.dialog.css
+++ b/src/styles/mu.dialog.css
@@ -9,7 +9,7 @@
   background-color: rgba(0, 0, 0, 0.75);
 }
 
-.mu-dialog-modal {
+.mu-dialog {
   position: fixed;
   display: none;
   left: 15%;
@@ -66,7 +66,7 @@
 @-webkit-keyframes fadeInUp {
   0% {
     opacity: 0;
-    -webkit-transform: translateY(20px);
+    -webkit-transform: translateY(30px);
   }
   100% {
     opacity: 1;
@@ -76,7 +76,7 @@
 @keyframes fadeInUp {
   0% {
     opacity: 0;
-    transform: translateY(20px);
+    transform: translateY(30px);
   }
   100% {
     opacity: 1;
@@ -95,7 +95,7 @@
   }
   100% {
     opacity: 0;
-    -webkit-transform: translateY(20px);
+    -webkit-transform: translateY(30px);
   }
 }
 @keyframes fadeOutDown {
@@ -105,7 +105,7 @@
   }
   100% {
     opacity: 0;
-    transform: translateY(20px);
+    transform: translateY(30px);
   }
 }
 .mu-fadeOutDown {
@@ -120,7 +120,7 @@
   }
   100% {
     opacity: 0;
-    -webkit-transform: translateY(-20px);
+    -webkit-transform: translateY(-30px);
   }
 }
 @keyframes fadeOutUp {
@@ -130,7 +130,7 @@
   }
   100% {
     opacity: 0;
-    transform: translateY(-20px);
+    transform: translateY(-30px);
   }
 }
 .mu-fadeOutUp {
@@ -187,4 +187,56 @@
 .mu-scaleDownOut {
   -webkit-animation: scaleDownOut .3s ease;
   animation: scaleDownOut .3s ease;
+}
+
+@-webkit-keyframes mu-skewin {
+  0% {
+    -webkit-transform-origin: 50% 100%;
+    -webkit-transform: perspective(1000px) rotate3d(1, 0, 0, 90deg);
+  }
+  100% {
+    -webkit-transform-origin: 50% 100%;
+    -webkit-transform: perspective(1000px) rotate3d(1, 0, 0, 0deg);
+  }
+}
+@keyframes mu-skewin {
+  0% {
+    transform-origin: 50% 100%;
+    transform: perspective(1000px) rotate3d(1, 0, 0, 90deg);
+  }
+  100% {
+    transform-origin: 50% 100%;
+    transform: perspective(1000px) rotate3d(1, 0, 0, 0deg);
+  }
+}
+.mu-skewin {
+  -webkit-animation: mu-skewin .4s ease;
+  animation: mu-skewin .4s ease;
+}
+
+@-webkit-keyframes mu-skewout {
+  0% {
+    -webkit-transform-origin: 50% 100%;
+    -webkit-transform: perspective(1000px) rotate3d(1, 0, 0, 0deg);
+  }
+  100% {
+    -webkit-transform-origin: 50% 100%;
+    -webkit-transform: perspective(1000px) rotate3d(1, 0, 0, 90deg);
+  }
+}
+@keyframes mu-skewout {
+  0% {
+    transform-origin: 50% 100%;
+    -webkit-transform: perspective(1000px) rotate3d(1, 0, 0, 0deg);
+    transform: perspective(1000px) rotate3d(1, 0, 0, 0deg);
+  }
+  100% {
+    transform-origin: 50% 100%;
+    -webkit-transform: perspective(1000px) rotate3d(1, 0, 0, 90deg);
+    transform: perspective(1000px) rotate3d(1, 0, 0, 90deg);
+  }
+}
+.mu-skewout {
+  -webkit-animation: mu-skewout .2s ease;
+  animation: mu-skewout .2s ease;
 }
