component dialog update2

--- a/src/styles/sass/test.scss
+++ b/src/styles/sass/test.scss
@@ -4,6 +4,12 @@
   background-color: #DDD;
 }
 
+// body{
+//     -webkit-perspective:1000px;
+//     perspective:1000px;
+//     backface-visibility: hidden;
+// }
+
 .test2{
     position: fixed;
     bottom: 20px;
@@ -35,6 +41,9 @@
     height: 150px;
     margin: 0 15px 15px;
     background-color: #DDD;
+    // -webkit-perspective:1000px;
+    // -webkit-transform-origin: 50% 100%;
+    // -webkit-transform: rotate3d(1,0,0,45deg);
     &:last-child{
         margin-bottom: 0;
     }
