whole mu solution , alpha edtion 0.0.1

--- a/src/styles/sass/test.scss
+++ b/src/styles/sass/test.scss
@@ -41,11 +41,11 @@
     .ws_head{
         border-radius: 10px 10px 0 0;
         background-color: #4fb81b;
-        height: 48px;
-        line-height: 48px;
+        height: 40px;
+        line-height: 40px;
         text-align: center;
         color: #FFF;
-        font-size: 2rem;
+        font-size: 1.6rem;
     }
     .ws_body{
         padding: 1rem 1.4rem;
@@ -67,24 +67,34 @@
         width: 100px;
         img{
             display: block;
-            width: 90px;
-            height: 90px;
+            width: 100px;
+            height: 100px;
+            border: 1px solid #eee;
         }
     }
     .info{
         // width: 55%;
-        padding-left: 100px;
+        padding-left: 110px;
         .p1{
             font-size: 2rem;
             font-weight: bold;
         }
         .p2{
             color: #999;
-            font-size: 1rem;
+            font-size: 1.2rem;
         }
         .p3{
             color: #4fb81b;
-            font-size: 1rem;
+            font-size: 1.2rem;
+            position: absolute;
+            bottom: 0;
+        }
+    }
+    @media screen and (min-width: 340px) {
+        .info{
+            .p2,.p3{
+                font-size: 1.4rem;
+            }
         }
     }
     /*
