--- a/src/styles/sass/mu.dialog.scss
+++ b/src/styles/sass/mu.dialog.scss
@@ -6,7 +6,7 @@
     bottom: 0;
     visibility: hidden;
     z-index: 999;
-    background-color: rgba(0,0,0,.8);
+    background-color: rgba(0, 0, 0, .8);
 }
 .mu-dialog{
     position: fixed;
@@ -50,7 +50,7 @@
   100% {opacity: 1;}
 }
 .mu-fadeIn {
-  -webkit-animation: fadeIn .3s ease; 
+  -webkit-animation: fadeIn .3s ease;
   animation: fadeIn .3s ease;
 }
 @-webkit-keyframes fadeOut {
