--- a/src/styles/mu.dialog.css
+++ b/src/styles/mu.dialog.css
@@ -122,7 +122,7 @@
   animation: fadeOut .3s ease;
 }
 
-@-webkit-keyframes fadeInUp {
+@-webkit-keyframes fadeInDown {
   0% {
     opacity: 0;
     -webkit-transform: translateY(30px);
@@ -132,7 +132,7 @@
     -webkit-transform: translateY(0);
   }
 }
-@keyframes fadeInUp {
+@keyframes fadeInDown {
   0% {
     opacity: 0;
     transform: translateY(30px);
@@ -142,9 +142,9 @@
     transform: translateY(0);
   }
 }
-.mu-fadeInUp {
-  -webkit-animation: fadeInUp .3s ease;
-  animation: fadeInUp .3s ease;
+.mu-fadeInDown {
+  -webkit-animation: fadeInDown .3s ease;
+  animation: fadeInDown .3s ease;
 }
 
 @-webkit-keyframes fadeOutDown {
@@ -170,6 +170,31 @@
 .mu-fadeOutDown {
   -webkit-animation: fadeOutDown .3s ease;
   animation: fadeOutDown .3s ease;
+}
+
+@-webkit-keyframes fadeInUp {
+  0% {
+    opacity: 0;
+    -webkit-transform: translateY(-30px);
+  }
+  100% {
+    opacity: 1;
+    -webkit-transform: translateY(0);
+  }
+}
+@keyframes fadeInUp {
+  0% {
+    opacity: 0;
+    transform: translateY(-30px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+.mu-fadeInUp {
+  -webkit-animation: fadeInUp .3s ease;
+  animation: fadeInUp .3s ease;
 }
 
 @-webkit-keyframes fadeOutUp {
@@ -273,4 +298,54 @@
 .mu-scaleUpIn {
   -webkit-animation: mu-scaleUpIn .3s ease;
   animation: mu-scaleUpIn .3s ease;
+}
+
+@-webkit-keyframes fadeInRight {
+  0% {
+    opacity: 0;
+    -webkit-transform: translateX(30px);
+  }
+  100% {
+    opacity: 1;
+    -webkit-transform: translateX(0);
+  }
+}
+@keyframes fadeInRight {
+  0% {
+    opacity: 0;
+    transform: translateX(30px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateX(0);
+  }
+}
+.mu-fadeInRight {
+  -webkit-animation: fadeInRight .3s ease;
+  animation: fadeInRight .3s ease;
+}
+
+@-webkit-keyframes fadeOutRight {
+  0% {
+    opacity: 1;
+    -webkit-transform: translateX(0);
+  }
+  100% {
+    opacity: 0;
+    -webkit-transform: translateX(30px);
+  }
+}
+@keyframes fadeOutRight {
+  0% {
+    opacity: 1;
+    transform: translateX(0);
+  }
+  100% {
+    opacity: 0;
+    transform: translateX(30px);
+  }
+}
+.mu-fadeOutRight {
+  -webkit-animation: fadeOutRight .3s ease;
+  animation: fadeOutRight .3s ease;
 }
