--- a/src/styles/sass/test.scss
+++ b/src/styles/sass/test.scss
@@ -164,7 +164,13 @@
     left: 0;
     bottom: 0;
 }
-#jump{
+#prev{
+    left: 10px;
     bottom: 10px;
     z-index:10;
+}
+#next{
+    right: 10px;
+    bottom: 10px;
+    z-index: 10;
 }
