--- a/src/styles/test.css
+++ b/src/styles/test.css
@@ -143,7 +143,14 @@
   bottom: 0;
 }
 
-#jump {
+#prev {
+  left: 10px;
+  bottom: 10px;
+  z-index: 10;
+}
+
+#next {
+  right: 10px;
   bottom: 10px;
   z-index: 10;
 }
