fix slider touchmove flick

--- a/src/styles/sass/manual.scss
+++ b/src/styles/sass/manual.scss
@@ -69,7 +69,9 @@
 .slider{
   height: 100px;
   background-color: #EEE;
-  padding: 10px;
+  .li{
+    padding: 10px;
+  }
   img{
     width: 100%;
   }
