--- a/samples/responsive/base.css
+++ b/samples/responsive/base.css
@@ -26,7 +26,7 @@ caption, th {
 }
 
 h1, h2, h3, h4, h5, h6 {
-  /*font-size: 100%;*/
+  font-size: 100%;
   font-weight: normal;
 }
 
@@ -55,11 +55,11 @@ input, textarea, select {
 
 html {
   font-size: 62.5%;
-  -webkit-text-size-adjust: none;
   -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
 }
 
 body {
+  -webkit-text-size-adjust: none;
   font-family: "Helvetica Neue", Helvetica, "Microsoft Yahei", STHeiTi, sans-serif;
   font-size: 1.4rem;
   background-color: #FFF;
