--- a/src/styles/mu.css
+++ b/src/styles/mu.css
@@ -73,11 +73,15 @@
   clear: both;
 }
 
-@media screen and (min-width: 640px) {
+@media screen and (min-width: 480px) {
   .mu-dialog {
-    width: 640px;
+    width: 480px;
     left: 0;
     right: 0;
+  }
+
+  .mu-pop {
+    width: 280px;
   }
 }
 @-webkit-keyframes fadeIn {
