--- a/src/styles/sass/mu.scss
+++ b/src/styles/sass/mu.scss
@@ -66,11 +66,14 @@
 .cf:after {
   clear: both;
 }
-@media screen and (min-width: 640px) {
+@media screen and (min-width: 480px) {
     .mu-dialog{
-        width: 640px;
+        width: 480px;
         left: 0;
         right: 0;
+    }
+    .mu-pop{
+      width: 280px;
     }
 }
 
