--- a/samples/commonpage/css/m-zt.css
+++ b/samples/commonpage/css/m-zt.css
@@ -60,7 +60,7 @@ input, textarea, select {
 }
 
 * {
-  /*-webkit-tap-highlight-color: rgba(255, 255, 255, 0);*/
+  -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
 }
 
 html {
@@ -124,6 +124,7 @@ a {
 .page {
   width: 100%;
   height: 100%;
+  overflow: hidden;
   position: relative;
 }
 
