--- a/samples/pagetransition/css/m-zt.css
+++ b/samples/pagetransition/css/m-zt.css
@@ -60,7 +60,7 @@ input, textarea, select {
 }
 
 * {
-  /*-webkit-tap-highlight-color: rgba(255, 255, 255, 0);*/
+  -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
 }
 
 html {
@@ -115,16 +115,25 @@ a {
   width: 100%;
   height: 100%;
   position: relative;
-  /*-webkit-perspective: 1200px;
+  -webkit-perspective: 1200px;
   perspective: 1200px;
   -webkit-transform-style: preserve-3d;
-  transform-style: preserve-3d;*/
+  transform-style: preserve-3d;
 }
 
 .page {
   width: 100%;
   height: 100%;
-  position: relative;
+  position: absolute;
+  overflow: hidden;
+  visibility: hidden;
+  z-index: 0;
+  left: 0;
+  top: 0;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+  -webkit-transform-style: preserve-3d;
+  transform-style: preserve-3d;
 }
 
 .page .m_cont {
@@ -1010,50 +1019,6 @@ a {
   animation: moveFromBottom .4s ease both;
 }
 
-@-webkit-keyframes moveToTop {
-  to {
-    -webkit-transform: translateY(-100%);
-  }
-}
-@keyframes moveToTop {
-  to {
-    -webkit-transform: translateY(-100%);
-    transform: translateY(-100%);
-  }
-}
-@-webkit-keyframes moveFromTop {
-  from {
-    -webkit-transform: translateY(-100%);
-  }
-}
-@keyframes moveFromTop {
-  from {
-    -webkit-transform: translateY(-100%);
-    transform: translateY(-100%);
-  }
-}
-@-webkit-keyframes moveToBottom {
-  to {
-    -webkit-transform: translateY(100%);
-  }
-}
-@keyframes moveToBottom {
-  to {
-    -webkit-transform: translateY(100%);
-    transform: translateY(100%);
-  }
-}
-@-webkit-keyframes moveFromBottom {
-  from {
-    -webkit-transform: translateY(100%);
-  }
-}
-@keyframes moveFromBottom {
-  from {
-    -webkit-transform: translateY(100%);
-    transform: translateY(100%);
-  }
-}
 
 @-webkit-keyframes hizoomIn {
   0% {
