--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -60,7 +60,7 @@ input, textarea, select {
 }
 
 * {
-  -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
+  /*-webkit-tap-highlight-color: rgba(255, 255, 255, 0);*/
 }
 
 html {
